resolved alignment issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -161,13 +161,13 @@ a {
 /*Icons*/
 
 .icon {
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
 }
 
 .icon--small {
-    width: 30px;
-    height: 30px;
+    width: 3rem;
+    height: 3rem;
 }
 
 .icon--primary {
@@ -180,8 +180,8 @@ a {
 
 .icon-container {
     background: #f3f9fa;
-    width: 64px;
-    height: 64px;
+    width: 6.4rem;
+    height: 6.4rem;
     border-radius: 100%;
     display: inline-flex;
     justify-content: center;
@@ -459,7 +459,7 @@ input {
 .testimonial__image > .icon-container {
     position: absolute;
     top: 3rem;
-    right: -32px;
+    right: -3.2rem;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
